--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+cargo-features = ["test-dummy-unstable"]
 [package]
 
     name         = "substd"
@@ -7,10 +8,10 @@
     rust-version = "1.85.0"
     license      = "Apache-2.0"
     authors      = ["Azzybana Raccoon <121582001+Azzybana@users.noreply.github.com>"]
+    repository   = "https://github.com/Azzybana/substd"
     readme       = "README.md"
     resolver     = "3" # Requires Rust 1.84+
     im-a-teapot  = false # Cannot yet brew tea                                                                  # I will eventually make tea
-    publish      = false
     keywords      = ["no_std", "embedded", "library", "memory", "vector"] 
     categories    = ["no-std", "hardware-support", "memory-management", "no-std::no-alloc", "development-tools"]
 
