--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ cargo-features = ["test-dummy-unstable"]
     license      = "Apache-2.0"
     authors      = ["Azzybana Raccoon <121582001+Azzybana@users.noreply.github.com>"]
     repository   = "https://github.com/Azzybana/substd"
+    homepage      = "https://azzybana.github.io/substd/"
+    documentation = "https://docs.rs/substd/"
     readme       = "README.md"
     resolver     = "3" # Requires Rust 1.84+
     im-a-teapot  = false # Cannot yet brew tea                                                                  # I will eventually make tea
